--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 2.8)
 
 PROJECT(ZLIB)
 
+SET(ZLIB_VERSION_MAJOR "1")
+SET(ZLIB_VERSION_MINOR "2")
+SET(ZLIB_VERSION_PATCH "3")
+
 INCLUDE_DIRECTORIES(
   "${ZLIB_SOURCE_DIR}"
   "${ZLIB_SOURCE_DIR}"
@@ -42,4 +46,40 @@ ENDFOREACH(name)
 
 ADD_LIBRARY(zlib ${ZLIB_SRCS})
 
-#INSTALL(FILES Copyright.txt DESTINATION ${CMake_DOC_DEST}/cmzlib)
+# Configure install locations.  This allows parent projects to modify
+# the install location.
+IF(NOT ZLIB_INSTALL_BIN_DIR)
+  SET(ZLIB_INSTALL_BIN_DIR bin)
+ENDIF()
+
+IF(NOT ZLIB_INSTALL_INCLUDE_DIR)
+  SET(ZLIB_INSTALL_INCLUDE_DIR
+    include/zlib-${ZLIB_VERSION_MAJOR}.${ZLIB_VERSION_MINOR}.${ZLIB_VERSION_PATCH}
+    )
+ENDIF()
+
+IF(NOT ZLIB_INSTALL_LIB_DIR)
+  SET(ZLIB_INSTALL_LIB_DIR
+    lib/zlib-${ZLIB_VERSION_MAJOR}.${ZLIB_VERSION_MINOR}.${ZLIB_VERSION_PATCH}
+    )
+ENDIF()
+
+IF(NOT ZLIB_INSTALL_DOC_DIR)
+  SET(ZLIB_INSTALL_DOC_DIR
+    doc/zlib-${ZLIB_VERSION_MAJOR}.${ZLIB_VERSION_MINOR}.${ZLIB_VERSION_PATCH}
+    )
+ENDIF()
+
+# Install library
+INSTALL(TARGETS zlib
+  RUNTIME DESTINATION ${ZLIB_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
+  LIBRARY DESTINATION ${ZLIB_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
+  ARCHIVE DESTINATION ${ZLIB_INSTALL_LIB_DIR} COMPONENT Development
+  )
+
+# Install public headers
+INSTALL(FILES zlib.h zconf.h
+  DESTINATION ${ZLIB_INSTALL_INCLUDE_DIR} COMPONENT Development
+  )
+
+INSTALL(FILES Copyright.txt DESTINATION ${ZLIB_INSTALL_DOC_DIR} COMPONENT RuntimeLibraries)
