--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,15 +53,11 @@ IF(NOT ZLIB_INSTALL_BIN_DIR)
 ENDIF()
 
 IF(NOT ZLIB_INSTALL_INCLUDE_DIR)
-  SET(ZLIB_INSTALL_INCLUDE_DIR
-    include/zlib-${ZLIB_VERSION_MAJOR}.${ZLIB_VERSION_MINOR}.${ZLIB_VERSION_PATCH}
-    )
+  SET(ZLIB_INSTALL_INCLUDE_DIR include)
 ENDIF()
 
 IF(NOT ZLIB_INSTALL_LIB_DIR)
-  SET(ZLIB_INSTALL_LIB_DIR
-    lib/zlib-${ZLIB_VERSION_MAJOR}.${ZLIB_VERSION_MINOR}.${ZLIB_VERSION_PATCH}
-    )
+  SET(ZLIB_INSTALL_LIB_DIR lib)
 ENDIF()
 
 IF(NOT ZLIB_INSTALL_DOC_DIR)
